@@ -99,7 +99,8 @@ module TyVarEnv : sig
        a new e.g. type signature. Optionally pass some univars that
        are in scope. *)
 
-  val lookup_local : string -> type_expr
+  val lookup_local :
+    row_context:type_expr option ref list -> string -> type_expr
     (* look up a local type variable; throws Not_found if it isn't in scope *)
 
   val remember_used : string -> type_expr -> Location.t -> unit
@@ -139,9 +140,16 @@ end = struct
      row variable in the ['a. < m : ty; .. > as 'a] idiom.  They are like the
      [used_variables], but will not be globalized in [globalize_used_variables].
   *)
-  let univars = ref ([] : (string * type_expr) list)
+  type pending_univar = {
+    univar: type_expr  (** the univar itself *);
+    mutable associated: type_expr option ref list
+     (** associated references to row variables that we want to generalize
+       if possible *)
+  }
+
+  let univars = ref ([] : (string * pending_univar) list)
   let assert_univars uvs =
-    assert (List.for_all (fun (_name, v) -> not_generic v) uvs)
+    assert (List.for_all (fun (_name, v) -> not_generic v.univar) uvs)
 
   (* These are variables that will become univars when we're done with the
      current type. Used to force free variables in method types to become
@@ -182,7 +190,7 @@ end = struct
     TyVarMap.fold add_name !type_variables []
 
   (*****)
-  type poly_univars = (string * type_expr) list
+  type poly_univars = (string * pending_univar) list
 
   let with_univars new_ones f =
     assert_univars new_ones;
@@ -193,11 +201,24 @@ end = struct
       ~finally:(fun () -> univars := old_univars)
 
   let make_poly_univars vars =
-    List.map (fun name -> name, newvar ~name ()) vars
+    let make name = { univar=newvar ~name (); associated = [] } in
+    List.map (fun name -> name, make name ) vars
+
+  let promote_generics_to_univars promoted vars =
+      List.fold_left
+        (fun acc v ->
+           match get_desc v with
+           | Tvar name when get_level v = Btype.generic_level ->
+               set_type_desc v (Tunivar name);
+               v :: acc
+           | _ -> acc
+        )
+        promoted vars
 
   let check_poly_univars env loc vars =
-    vars |> List.iter (fun (_, v) -> generalize v);
-    vars |> List.map (fun (name, ty1) ->
+    vars |> List.iter (fun (_, p) -> generalize p.univar);
+    let univars =
+      vars |> List.map (fun (name, {univar=ty1; _ }) ->
       let v = Btype.proxy ty1 in
       begin match get_desc v with
       | Tvar name when get_level v = Btype.generic_level ->
@@ -206,6 +227,17 @@ end = struct
          raise (Error (loc, env, Cannot_quantify(name, v)))
       end;
       v)
+    in
+    (* Since we are promoting variables to univars in
+       {!promote_generics_to_univars}, even if a row variable is associated with
+       multiple univars we will promote it once, when checking the nearest
+       univar associated to this row variable.
+    *)
+    let promote_associated acc (_,v) =
+      let enclosed_rows = List.filter_map (!) v.associated in
+      promote_generics_to_univars acc enclosed_rows
+    in
+    List.fold_left promote_associated univars vars
 
   let instance_poly_univars env loc vars =
     let vs = check_poly_univars env loc vars in
@@ -222,10 +254,16 @@ end = struct
     univars := uvs;
     used_variables := TyVarMap.empty
 
+  let associate row_context p =
+    let add l x = if List.memq x l then l else x :: l in
+    p.associated <- List.fold_left add row_context p.associated
+
   (* throws Not_found if the variable is not in scope *)
-  let lookup_local name =
+  let lookup_local ~row_context name =
     try
-      List.assoc name !univars
+      let p = List.assoc name !univars in
+      associate row_context p;
+      p.univar
     with Not_found ->
       instance (fst (TyVarMap.find name !used_variables))
       (* This call to instance might be redundant; all variables
@@ -254,15 +292,7 @@ end = struct
   let collect_univars f =
     pre_univars := [];
     let result = f () in
-    let univs =
-      List.fold_left
-        (fun acc v ->
-           match get_desc v with
-           | Tvar name when get_level v = Btype.generic_level ->
-               set_type_desc v (Tunivar name);
-               v :: acc
-           | _ -> acc)
-        [] !pre_univars in
+    let univs = promote_generics_to_univars [] !pre_univars in
     result, univs
 
   let new_var ?name policy =
@@ -378,11 +408,11 @@ let transl_type_param env styp =
   Builtin_attributes.warning_scope styp.ptyp_attributes
     (fun () -> transl_type_param env styp)
 
-let rec transl_type env policy styp =
+let rec transl_type env ~policy ?(aliased=false) ~row_context styp =
   Builtin_attributes.warning_scope styp.ptyp_attributes
-    (fun () -> transl_type_aux env policy styp)
+    (fun () -> transl_type_aux env ~policy ~aliased ~row_context styp)
 
-and transl_type_aux env policy styp =
+and transl_type_aux env ~row_context ~aliased ~policy styp =
   let loc = styp.ptyp_loc in
   let ctyp ctyp_desc ctyp_type =
     { ctyp_desc; ctyp_type; ctyp_env = env;
@@ -397,7 +427,7 @@ and transl_type_aux env policy styp =
       if not (valid_tyvar_name name) then
         raise (Error (styp.ptyp_loc, env, Invalid_variable_name ("'" ^ name)));
       begin try
-        TyVarEnv.lookup_local name
+        TyVarEnv.lookup_local ~row_context:row_context name
       with Not_found ->
         let v = TyVarEnv.new_var ~name policy in
         TyVarEnv.remember_used name v styp.ptyp_loc;
@@ -406,8 +436,8 @@ and transl_type_aux env policy styp =
     in
     ctyp (Ttyp_var name) ty
   | Ptyp_arrow(l, st1, st2) ->
-    let cty1 = transl_type env policy st1 in
-    let cty2 = transl_type env policy st2 in
+    let cty1 = transl_type env ~policy ~row_context st1 in
+    let cty2 = transl_type env ~policy ~row_context st2 in
     let ty1 = cty1.ctyp_type in
     let ty1 =
       if Btype.is_optional l
@@ -417,7 +447,7 @@ and transl_type_aux env policy styp =
     ctyp (Ttyp_arrow (l, cty1, cty2)) ty
   | Ptyp_tuple stl ->
     assert (List.length stl >= 2);
-    let ctys = List.map (transl_type env policy) stl in
+    let ctys = List.map (transl_type env ~policy ~row_context) stl in
     let ty = newty (Ttuple (List.map (fun ctyp -> ctyp.ctyp_type) ctys)) in
     ctyp (Ttyp_tuple ctys) ty
   | Ptyp_constr(lid, stl) ->
@@ -432,7 +462,7 @@ and transl_type_aux env policy styp =
         raise(Error(styp.ptyp_loc, env,
                     Type_arity_mismatch(lid.txt, decl.type_arity,
                                         List.length stl)));
-      let args = List.map (transl_type env policy) stl in
+      let args = List.map (transl_type env ~policy ~row_context) stl in
       let params = instance_list decl.type_params in
       let unify_param =
         match decl.type_manifest with
@@ -451,7 +481,7 @@ and transl_type_aux env policy styp =
         newconstr path (List.map (fun ctyp -> ctyp.ctyp_type) args) in
       ctyp (Ttyp_constr (path, lid, args)) constr
   | Ptyp_object (fields, o) ->
-      let ty, fields = transl_fields env policy o fields in
+      let ty, fields = transl_fields env ~policy ~row_context o fields in
       ctyp (Ttyp_object (fields, o)) (newobj ty)
   | Ptyp_class(lid, stl) ->
       let (path, decl) =
@@ -462,7 +492,7 @@ and transl_type_aux env policy styp =
         raise(Error(styp.ptyp_loc, env,
                     Type_arity_mismatch(lid.txt, decl.type_arity,
                                         List.length stl)));
-      let args = List.map (transl_type env policy) stl in
+      let args = List.map (transl_type env ~policy ~row_context) stl in
       let body = Option.get decl.type_manifest in
       let (params, body) = instance_parameterized_type decl.type_params body in
       List.iter2
@@ -486,8 +516,8 @@ and transl_type_aux env policy styp =
   | Ptyp_alias(st, alias) ->
       let cty =
         try
-          let t = TyVarEnv.lookup_local alias in
-          let ty = transl_type env policy st in
+          let t = TyVarEnv.lookup_local ~row_context alias in
+          let ty = transl_type env ~policy ~aliased:true ~row_context st in
           begin try unify_var env t ty.ctyp_type with Unify err ->
             let err = Errortrace.swap_unification_error err in
             raise(Error(styp.ptyp_loc, env, Alias_type_mismatch err))
@@ -498,7 +528,7 @@ and transl_type_aux env policy styp =
             with_local_level_if_principal begin fun () ->
               let t = newvar () in
               TyVarEnv.remember_used alias t styp.ptyp_loc;
-              let ty = transl_type env policy st in
+              let ty = transl_type env ~policy ~row_context st in
               begin try unify_var env t ty.ctyp_type with Unify err ->
                 let err = Errortrace.swap_unification_error err in
                 raise(Error(styp.ptyp_loc, env, Alias_type_mismatch err))
@@ -537,7 +567,7 @@ and transl_type_aux env policy styp =
         with Not_found ->
           Hashtbl.add hfields h (l,f)
       in
-      let add_field field =
+      let add_field row_context field =
         let rf_loc = field.prf_loc in
         let rf_attributes = field.prf_attributes in
         let rf_desc = match field.prf_desc with
@@ -545,7 +575,7 @@ and transl_type_aux env policy styp =
             name := None;
             let tl =
               Builtin_attributes.warning_scope rf_attributes
-                (fun () -> List.map (transl_type env policy) stl)
+                (fun () -> List.map (transl_type env ~policy ~row_context) stl)
             in
             let f = match present with
               Some present when not (List.mem l.txt present) ->
@@ -561,7 +591,7 @@ and transl_type_aux env policy styp =
             add_typed_field styp.ptyp_loc l.txt f;
               Ttag (l,c,tl)
         | Rinherit sty ->
-            let cty = transl_type env policy sty in
+            let cty = transl_type env ~policy ~row_context sty in
             let ty = cty.ctyp_type in
             let nm =
               match get_desc cty.ctyp_type with
@@ -593,7 +623,11 @@ and transl_type_aux env policy styp =
         in
         { rf_desc; rf_loc; rf_attributes; }
       in
-      let tfields = List.map add_field fields in
+      let more_slot = ref None in
+      let row_context =
+        if aliased then row_context else more_slot :: row_context
+      in
+      let tfields = List.map (add_field row_context) fields in
       let fields = List.rev (Hashtbl.fold (fun _ p l -> p :: l) hfields []) in
       begin match present with None -> ()
       | Some present ->
@@ -610,6 +644,7 @@ and transl_type_aux env policy styp =
         if Btype.static_row (make_row (newvar ())) then newty Tnil else
            TyVarEnv.new_var policy
       in
+      more_slot := Some more;
       let ty = newty (Tvariant (make_row more)) in
       ctyp (Ttyp_variant (tfields, closed, present)) ty
   | Ptyp_poly(vars, st) ->
@@ -618,7 +653,7 @@ and transl_type_aux env policy styp =
         with_local_level begin fun () ->
           let new_univars = TyVarEnv.make_poly_univars vars in
           let cty = TyVarEnv.with_univars new_univars begin fun () ->
-            transl_type env policy st
+            transl_type env ~policy ~row_context st
           end in
           (new_univars, cty)
         end
@@ -637,7 +672,7 @@ and transl_type_aux env policy styp =
       let mty =
         TyVarEnv.with_local_scope (fun () -> !transl_modtype env mty) in
       let ptys = List.map (fun (s, pty) ->
-                             s, transl_type env policy pty
+                             s, transl_type env ~policy ~row_context pty
                           ) l in
       let path = !transl_modtype_longident loc env p.txt in
       let ty = newty (Tpackage (path,
@@ -652,7 +687,7 @@ and transl_type_aux env policy styp =
   | Ptyp_extension ext ->
       raise (Error_forward (Builtin_attributes.error_of_extension ext))
 
-and transl_fields env policy o fields =
+and transl_fields env ~policy ~row_context o fields =
   let hfields = Hashtbl.create 17 in
   let add_typed_field loc l ty =
     try
@@ -670,14 +705,15 @@ and transl_fields env policy o fields =
     | Otag (s, ty1) -> begin
         let ty1 =
           Builtin_attributes.warning_scope of_attributes
-            (fun () -> transl_type env policy (Ast_helper.Typ.force_poly ty1))
+            (fun () -> transl_type env ~policy ~row_context
+                (Ast_helper.Typ.force_poly ty1))
         in
         let field = OTtag (s, ty1) in
         add_typed_field ty1.ctyp_loc s.txt ty1.ctyp_type;
         field
       end
     | Oinherit sty -> begin
-        let cty = transl_type env policy sty in
+        let cty = transl_type env ~policy ~row_context sty in
         let nm =
           match get_desc cty.ctyp_type with
             Tconstr(p, _, _) -> Some p
@@ -741,6 +777,9 @@ let rec make_fixed_univars ty =
     | _ ->
         Btype.iter_type_expr make_fixed_univars ty
     end
+
+let transl_type env policy styp =
+  transl_type env ~policy ~row_context:[] styp
 
 let make_fixed_univars ty =
   make_fixed_univars ty;
